--- a/.github/workflows/github-actions-bundling.yml
+++ b/.github/workflows/github-actions-bundling.yml
@@ -8,7 +8,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [18.x]
+        node-version: [22.x]
 
     steps:
     - uses: actions/checkout@v3
@@ -26,4 +26,4 @@ jobs:
     - name: Deploy bundle to github pages
       uses: JamesIves/github-pages-deploy-action@v4
       with:
-        folder: docs/production # The folder the action should deploy.
+        folder: . # The folder the action should deploy.
